--- a/src/app/menu/collab-menu/collab-menu.component.html
+++ b/src/app/menu/collab-menu/collab-menu.component.html
@@ -251,23 +251,34 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/collaborateur/mes-entretiens']">
+          <a class="nav-link" data-bs-toggle="collapse" href="#hey" aria-expanded="false" aria-controls="hey">
             <i class="mdi mdi-camcorder menu-icon"></i>
-            <span class="menu-title">Mes Entretiens </span>
+            <span class="menu-title">Mes Entretiens</span>
+            <i class="menu-arrow"></i>
+          </a>
+          <div class="collapse" id="hey">
+            <ul class="nav flex-column sub-menu">
+              <li class="nav-item"> <a class="nav-link" [routerLink]="['/collaborateur/mes-entretiens']" > Technique </a></li>
+              <li class="nav-item"> <a class="nav-link"  [routerLink]="['/collaborateur/mes-entretiens-Rh']"> Rh  </a></li>
+
+           </ul>
+          </div>
+        </li>
+       
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/collaborateur/mes-sessions']">
+            <i class="mdi mdi mdi-airplay  menu-icon"></i>
+            <span class="menu-title">Mes Sessions </span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pages/tables/basic-table.html">
-            <i class="mdi mdi-grid-large menu-icon"></i>
-            <span class="menu-title">Tables</span>
+          <a class="nav-link" [routerLink]="['/collaborateur/mes-bilans']">
+            <i class="mdi mdi mdi mdi-file-document menu-icon"></i>
+            <span class="menu-title">Mes Bilans Annuel </span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="pages/icons/mdi.html">
-            <i class="mdi mdi-emoticon menu-icon"></i>
-            <span class="menu-title">Icons</span>
-          </a>
-        </li>
+       
+       
 
        
       </ul>
