--- a/src/app/menu/formateur-menu/formateur-menu.component.html
+++ b/src/app/menu/formateur-menu/formateur-menu.component.html
@@ -213,6 +213,12 @@
             </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/formateur/mes-sessions']">
+              <i class="mdi mdi mdi-airplay            menu-icon"></i>
+              <span class="menu-title">Mes Sessions </span>
+            </a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="pages/charts/chartjs.html">
               <i class="mdi mdi-chart-pie menu-icon"></i>
               <span class="menu-title">Charts</span>
