--- a/src/app/Collaborateur/Formation/liste-des-formations/liste-des-formations.component.css
+++ b/src/app/Collaborateur/Formation/liste-des-formations/liste-des-formations.component.css
@@ -3,6 +3,8 @@
     margin: 10px 0 20px 0;
     background-color: #ffffff;
     border: 1px solid #d8d8d8;
+    width: calc(50% - 10px); /* Moitié de la largeur de son conteneur parent, moins la marge */
+    margin-bottom: 20px;
     border-top-width: 0;
     border-bottom-width: 2px;
     -webkit-border-radius: 3px;
@@ -14,7 +16,16 @@
     -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
             box-sizing: border-box;
+          
   }
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; /* Alignement des cartes sur l'axe principal avec un espacement égal */
+  }
+  
+ 
+  
   
   
   .card.hovercard {
