--- a/src/app/Formateur/all-formations/all-formations.component.html
+++ b/src/app/Formateur/all-formations/all-formations.component.html
@@ -194,10 +194,10 @@
 
                     <td>
                       <div class="col-sm-6 col-md-4 col-lg-3">
-                        <a
+                        <!-- <a
                           class="mdi mdi-eye"
                           (click)="openModalById(event.id)"
-                        ></a>
+                        ></a> -->
                       </div>
                       <div class="col-sm-6 col-md-4 col-lg-3">
                         <button class="btn btn-inverse-success" (click)="openModalUpdate(event.id)">Mettre a jour</button>
@@ -206,6 +206,8 @@
                         <button class="btn btn-inverse-danger" (click)="deleteFormation(event.id)">Supprimer</button>
                       </div>
                     </td>
+                    <td>    <button class="btn btn-primary" [routerLink]="['/formateur/formation-byId', event.id]">Voir détails</button>
+
                   </tr>
                 </table>
                 <div class="d-flex justify-content-center">
