--- a/src/app/menu/manager-menu/manager-menu.component.html
+++ b/src/app/menu/manager-menu/manager-menu.component.html
@@ -205,7 +205,12 @@
             <span class="menu-title">Dashboard</span>
           </a>
         </li>
-
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/managerService/mon-equipe']">
+            <i class=" mdi mdi-account-multiple  menu-icon"></i>
+            <span class="menu-title">Mon Equipe </span>
+          </a>
+        </li>
         <li class="nav-item">
           <a
             class="nav-link"
@@ -244,6 +249,7 @@
             </ul>
           </div>
         </li>
+       
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
             <i class="mdi mdi-file-document-box-outline menu-icon"></i>
