--- a/src/app/Admin/ManagerService/add-compte/add-compte.component.html
+++ b/src/app/Admin/ManagerService/add-compte/add-compte.component.html
@@ -1,46 +1,11 @@
-<style>
-  /* Style pour les champs de saisie invalides */
-      .disabled-cursor {
-        cursor: not-allowed; /* Utiliser le curseur "not allowed" lorsque le bouton est désactivé */
-      }
-      .dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  z-index: 1000;
-}
-
-.dropdown:hover .dropdown-menu {
-  display: block;
-}
-
-      .custom-error-message {
-          color: red; /* Couleur du texte en rouge */
-          font-size: 0.8rem; /* Taille de la police */
-          margin-top: 0.25rem; /* Marge en haut pour séparer le message d'erreur du champ de saisie */
-      }
-      /* Couleur de la barre de progression */
-      .progress-bar-strength {
-          background-color: #28a745; /* Couleur verte */
-      }
-      
-      /* Animation de la barre de progression */
-      .progress-bar-strength {
-          transition: width 0.3s ease; /* Animation fluide de la largeur */
-      }
-      
-          
-          </style>
 <div class="card">
   <div class="card-body">
     <h4 class="card-title"> Manager Service</h4>
     <hr>
     <form [formGroup]="managerServiceForm" (ngSubmit)="onSubmit()">
-
+      <div *ngIf="errorMessage" class="alert alert-danger">
+        {{ errorMessage }}
+      </div>
       <div *ngIf="currentStep === 1">
         <div class="d-flex justify-content-end">
           <a  class="btn btn-link" (click)="nextStep()">
@@ -48,7 +13,7 @@
           </div>
         <p class="card-description">
           Ajout Compte Manager Service  </p>
-         
+         <br>
         <div class="row">
         <div class="col-md-6">
           <div class="form-group">
@@ -63,6 +28,19 @@
           </div>
 
           <div class="form-group">
+            <label for="exampleInputNumtel">Numero de telephone</label>
+            <input type="text" class="form-control" id="numtel" formControlName="numtel" placeholder="Numero de telephone"
+              required [ngClass]="{ 'is-invalid': managerServiceForm.get('numtel')?.invalid && managerServiceForm.get('numtel')?.touched }"
+              pattern="[0-9]{8}"> <!-- Utilisation de l'attribut pattern pour limiter à 8 chiffres -->
+            <div *ngIf="managerServiceForm.get('numtel')?.invalid && managerServiceForm.get('numtel')?.touched"
+              class="custom-error-message">
+              Le numero de telephone doit contenir 8 chiffres
+            </div>
+          </div>
+          
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
             <label for="exampleInputPrenom">Prenom</label>
             <input type="text" class="form-control" id="prenom" formControlName="prenom" placeholder="Prenom" required
               [ngClass]="{ 'is-invalid': managerServiceForm.get('prenom')?.invalid && managerServiceForm.get('prenom')?.touched }">
@@ -72,35 +50,6 @@
               Le prenom est obligatoire
             </div>
           </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <label for="exampleInputNumtel">Numero de telephone</label>
-            <input type="number" class="form-control" id="numtel" formControlName="numtel" placeholder="Numero de telephone" required
-              [ngClass]="{ 'is-invalid': managerServiceForm.get('numtel')?.invalid && managerServiceForm.get('numtel')?.touched }">
-
-            <div *ngIf="managerServiceForm.get('numtel')?.invalid && managerServiceForm.get('numtel')?.touched"
-              class="custom-error-message">
-              Le numero de telephone est obligatoire
-            </div>
-          </div>
-
-          <!-- Champ 2 -->
-          <div class="form-group">
-            <label for="exampleInputMatricule">Matricule</label>
-            <input type="text" class="form-control" id="matricule" formControlName="matricule" placeholder="Matricule" required
-              [ngClass]="{ 'is-invalid': managerServiceForm.get('matricule')?.invalid && managerServiceForm.get('matricule')?.touched }">
-
-            <div *ngIf="managerServiceForm.get('matricule')?.invalid && managerServiceForm.get('matricule')?.errors?.['required'] && managerServiceForm.get('matricule')?.touched"
-              class="custom-error-message">
-              Le matricule est obligatoire
-            </div>
-          </div>        </div>
-      </div>
-
-      <!-- Deuxième moitié de la card -->
-      <div class="row">
-        <div class="col-md-6">
           <div class="form-group">
             <label for="exampleInputEmail3">Email</label>
             <input type="email" class="form-control" id="email" formControlName="email" placeholder="hello@example.com" required
@@ -116,6 +65,25 @@
             
             <div class="text-danger" *ngIf="emailExists">L'email existe déjà.</div>
           </div>
+
+           </div>
+      </div>
+
+      <!-- Deuxième moitié de la card -->
+      <div class="row">
+        <div class="col-md-6">
+            <!-- Champ 2 -->
+            <div class="form-group">
+              <label for="exampleInputMatricule">Matricule</label>
+              <input type="text" class="form-control" id="matricule" formControlName="matricule" placeholder="Matricule" required
+                [ngClass]="{ 'is-invalid': managerServiceForm.get('matricule')?.invalid && managerServiceForm.get('matricule')?.touched }">
+  
+              <div *ngIf="managerServiceForm.get('matricule')?.invalid && managerServiceForm.get('matricule')?.errors?.['required'] && managerServiceForm.get('matricule')?.touched"
+                class="custom-error-message">
+                Le matricule est obligatoire
+              </div>
+            </div>     
+         
           <!-- Champ 2 -->
            
            </div>
@@ -143,7 +111,6 @@
   <div class="d-flex justify-content-start">
     <a  class="btn btn-link" (click)="Step()">
       <p> <i class="mdi mdi-arrow-left"> </i>   </p>   </a> 
-  </div>
   </div>
           <p class="card-description">
 
@@ -208,6 +175,7 @@
          
         <button type="submit" class="btn btn-primary mr-2" >Ajouter</button>
         </div>
+</div>
 </div>
     </form>
   </div>
