--- a/src/app/User/signin/signin.component.html
+++ b/src/app/User/signin/signin.component.html
@@ -73,7 +73,7 @@
               #thisemail="ngModel"
               [ngClass]="{ 'is-invalid': thisemail.invalid && thisemail.touched }"
 >
-              <div *ngIf="thisemail.touched && !thisemail.value" class="custom-error-message">
+              <div *ngIf="thisemail.touched && !thisemail.value && !isSopraHrEmail(thisemail.value)" class="custom-error-message">
                   L'email est obligatoire
               </div>      
 
@@ -131,9 +131,9 @@
                                     </form>
     
                                     
-                                    <div class="new-account mt-3">
+                                    <!-- <div class="new-account mt-3">
                                         <p>Vous n'avez pas un compte ? <a class="text-primary" routerLink="/signup">S'inscrire</a></p>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
